adding final analysis

--- a/myopia.ipynb
+++ b/myopia.ipynb
@@ -738,7 +738,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yes, patients can be clustered together, but there would be a lot of over lap between the groups3333333"
+    "Yes, patients can be clustered together, but there would be a lot of over lap between the groups. That being said that it maybe harder to make good prediction on the patient population."
    ]
   }
  ],
